# tauriv2oauth

./: Cargo.toml  README.md  build.rs  package.json
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: oauth.toml
permissions/schemas/: schema.json
src/: lib.rs
