[package]
name = "tauri-plugin-tauriv2oauth"
version = "0.0.1"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-tauriv2oauth"  # Add this line


[dependencies]
tauri = { version = "2.0.0-beta.19" }
serde = "1.0"
thiserror = "1.0"
log = "^0.4"
httparse = "1.8.0"
url = "2.5.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.15", features = ["build"] }
